syntax = "proto3";

package data_store;

option go_package = "./v1";

service DataStore {
    // Save a key value pair
    rpc Save (SaveRequest) returns (SaveReply) {}

    // Get a value by key
    rpc Load (LoadRequest) returns (LoadReply) {}
}

message SaveRequest {
  string key = 1;
  string value = 2;
}

message SaveReply {
  string key = 1;
  string value = 2;
}

message LoadRequest {
  string key = 1;
}

message LoadReply {
  string value = 1;
}
